[update] 作品詳細の画像レイアウトの方法を変更

--- a/familybook.html
+++ b/familybook.html
@@ -130,17 +130,15 @@
        <p class="content__subtitle">Process</p>
        <h2 class="content__title">敬老の日は、「かぞくの日」</h2>
        <p class="content__text">敬老の日の抱える課題を私たちは、「核家族化する現代において祖父母が家族の文脈から離れてしまっていること」と捉え、「敬老の日に祖父母と家族の関係性を取り戻す」ための解決策として、参加型の未完成の絵本を提案しました。敬老の日を、かぞくの日として捉え直す視点を評価いただきました。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/familybook/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/familybook/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
          <img src="images/familybook/process03.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-
+         <img src="images/familybook/process04.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
        </div>
-       <div class="rightSide">
-         <img src="images/familybook/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
 
-         <img src="images/familybook/process04.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
 
-       </div>
+
      </div>
    </div>
 
@@ -149,20 +147,18 @@
        <p class="content__subtitle">Contents</p>
        <h2 class="content__title">世界に一つだけの絵本</h2>
        <p class="content__text">絵本の構成するページのほとんどが、下図のように空白でできています。子どもが祖父母に、いつもは聞けない話を聞いて、一つの作品に仕上げるプロダクトです。それにより、世界にたったの一つだけの絵本が生まれます。「家族のなりたち」や、「パパとママの出会い」、「パパとママの昔話」などのテーマで構成されています。</p>
-       <div class="leftSide">
+
+       <div class="imageContainer clearfix">
          <img src="images/familybook/page01.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/familybook/page02.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
          <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/familybook/page04.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
          <img src="images/familybook/page05.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/familybook/page06.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
          <img src="images/familybook/page07.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
        </div>
-       <div class="rightSide">
-         <img src="images/familybook/page02.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right">
 
-         <img src="images/familybook/page04.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-         <img src="images/familybook/page06.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-
-         <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-       </div>
 
 
 
@@ -174,16 +170,16 @@
        <p class="content__subtitle">User Research</p>
        <h2 class="content__title">6歳の女の子の実施例</h2>
        <p class="content__text">プロダクトの実用性を検証するため、実際に6歳児の女の子がいる家庭で、「かぞくが、ものがたり。」を使っていただきました。子どもの創造性を活かすお絵かきのページと、ある程度のストーリーの枠組みを用意することで、子どものモチベーションのバランスを保つことが確認できました。</p>
-       <div class="leftSide">
-         <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/page07.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+
+       <div class="imageContainer clearfix">
+         <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
+         <img src="images/familybook/research01.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
+         <img src="images/familybook/page07.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
+          <img src="images/familybook/research02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
+         <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
+         <img src="images/familybook/research03.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
        </div>
-       <div class="rightSide">
-          <img src="images/familybook/research01.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-           <img src="images/familybook/research02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-           <img src="images/familybook/research03.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-       </div>
+
        <img src="images/familybook/research04.png" alt="" class="worksImg worksImg--big">
 
 
