--- a/lineandball.html
+++ b/lineandball.html
@@ -133,17 +133,14 @@
        <p class="content__subtitle">Process</p>
        <h2 class="content__title">マッチ3からの脱却</h2>
        <p class="content__text">大人気ゲームアプリを代表する「パズドラ」や「ツムツム」といったパズルゲームの登場は、世の中のパズルゲームを席巻しながらも、パズルゲーム業界を「マス目」という制約に囚わせてしまいました。そこで、パズルゲームに必要不可欠なルール性という制約を残しつつも、答えを導く選択が無限に開かれた自由度の高いパズルゲームを提案しました。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/lineandball/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/lineandball/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--left imageEven">
          <img src="images/lineandball/process03.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-
-
-       </div>
-       <div class="rightSide">
-         <img src="images/lineandball/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-         <img src="images/lineandball/process04.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/lineandball/process04.png" alt="" class="worksImg worksImg--Small worksImg--Small--left imageEven">
 
        </div>
+
 
      </div>
    </div>
@@ -153,14 +150,13 @@
        <p class="content__subtitle">Game Tutorial</p>
        <h2 class="content__title">指から色鮮やかな「LINE」を作り出す</h2>
        <p class="content__text">画面上に存在する点と点を結ぶことで、「LINE」が引かれます。「LINE」の引き方や、どの点と結びつけるかで、無限の選択肢と答えが用意されています。「LINE」が引かれると、右上の数字が1つ減り、数が0になると、「BALL」が転がります。「BALL」がゴールにたどり着くことのできる「LINE」を探りあて描き明かすパズルゲームです。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/lineandball/iPhone01.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/lineandball/iPhone02.png" alt="" class="worksImg--Small worksImg--Small--right imageEven">
          <img src="images/lineandball/iPhone03.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/lineandball/iPhone04.png" alt="" class="worksImg--Small worksImg--Small--left imageEven">
        </div>
-       <div class="rightSide">
-         <img src="images/lineandball/iPhone02.png" alt="" class="worksImg--Small worksImg--Small--right">
-         <img src="images/lineandball/iPhone04.png" alt="" class="worksImg--Small worksImg--Small--left">
-       </div>
+
 
 
 
@@ -172,14 +168,14 @@
        <p class="content__subtitle">Variety</p>
        <h2 class="content__title">5種類の「LINE」の性質</h2>
        <p class="content__text">様々な色の点を結ぶことで、多種多様な性質をもつ「LINE」を生み出すことができます。黄色の点同士を結ぶと「飛び跳ねる性質をもつLINE」を作り、青色の点同士を結ぶと「壊れ砕ける性質をもつLINE」を作り出します。さらに、赤色と黄色の点を結ぶと「摩擦抵抗の少ない性質をもつLINEを作り、青色と黄色の点を結ぶと「粘着性をもつLINE」を作り出します。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/lineandball/bouncing.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/lineandball/fragile.png" alt="" class="worksImg worksImg--Small worksImg--Small--righ imageEven">
          <img src="images/lineandball/slippery.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+
+          <img src="images/lineandball/stickey.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
        </div>
-       <div class="rightSide">
-          <img src="images/lineandball/fragile.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-           <img src="images/lineandball/stickey.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-       </div>
+
 
 
      </div>
@@ -192,11 +188,9 @@
        <p class="content__subtitle">Game Design</p>
        <h2 class="content__title">レベル調整</h2>
        <p class="content__text">画面上に広がる「LINE」の色や数を調整することによって、ゲームの難易度を操作することが可能です。点の種類や色を増やせば増やすほど、生み出すことのできる「LINE」の選択肢が増え、複雑性と難易度を上げることができます。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/lineandball/iPhone05.png" alt="" class="worksImg--Small worksImg--Small--left">
-       </div>
-       <div class="rightSide">
-         <img src="images/lineandball/iPhone06.png" alt="" class="worksImg--Small worksImg--Small--right">
+         <img src="images/lineandball/iPhone06.png" alt="" class="worksImg--Small worksImg--Small--right imageEven">
        </div>
 
 
