--- a/playfulfes.html
+++ b/playfulfes.html
@@ -130,17 +130,14 @@
        <p class="content__subtitle">Process</p>
        <h2 class="content__title">21世紀の学びはワクワクするあそび。</h2>
        <p class="content__text">プレイフルフェスのコンセプトを表すため、「学び」としての印象よりも、「ワクワクするあそび」の印象を強く伝えるビジュアルを設計しました。ランディングページでは、ファーストビューがもっとも離脱に関わるため、ワークショップで大切にしているワクワクを演出する躍動感を伝えています。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/playfulfes/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/playfulfes/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
          <img src="images/playfulfes/process03.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-
-
+          <img src="images/playfulfes/process04.png" alt="" class="worksImg worksImg--Small worksImg--Small--left imageEven">
        </div>
-       <div class="rightSide">
-         <img src="images/playfulfes/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-         <img src="images/playfulfes/process04.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
 
-       </div>
+
 
        <!-- <img src="images/playfulfes/OGP.png" alt="" class="worksImg worksImg--big"> -->
 
@@ -152,16 +149,13 @@
        <p class="content__subtitle">PC Landing Page</p>
        <h2 class="content__title">Call To Action</h2>
        <p class="content__text">ワークショップイベントへの申し込みがこのランディングページでのコンバージョンになるため、CTAとしてエントリーボタンをナビゲーションバーに設置しました。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/playfulfes/Desktop_01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/playfulfes/Desktop_02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
          <img src="images/playfulfes/Desktop_03.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-
+         <img src="images/playfulfes/Desktop_04.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
        </div>
-       <div class="rightSide">
-         <img src="images/playfulfes/Desktop_02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
 
-         <img src="images/playfulfes/Desktop_04.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-       </div>
 
 
 
@@ -174,15 +168,14 @@
        <p class="content__subtitle">Responsive Design</p>
        <h2 class="content__title">口コミによる流入</h2>
        <p class="content__text">サイトへの流入が口コミからの流入であることを考え、スマホにおいてでも快適にランディングページが閲覧できるようResponsive Designを提案しました。また、サイト内にSocialShareボタンを設置することで、サイトへの流入を作りました。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/playfulfes/smartphone_01.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/playfulfes/smartphone_02.png" alt="" class="worksImg--Small worksImg--Small--right imageEven">
          <img src="images/playfulfes/smartphone_03.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/playfulfes/smartphone_05.png" alt="" class="worksImg--Small worksImg--Small--right imageEven">
+       </div>
 
-       </div>
-       <div class="rightSide">
-          <img src="images/playfulfes/smartphone_02.png" alt="" class="worksImg--Small worksImg--Small--right">
-          <img src="images/playfulfes/smartphone_05.png" alt="" class="worksImg--Small worksImg--Small--right">
-       </div>
+       
 
 
      </div>
