--- a/scrapboard.html
+++ b/scrapboard.html
@@ -132,17 +132,15 @@
        <p class="content__subtitle">Process</p>
        <h2 class="content__title">ユーザー中心設計に基づくプロトタイプ開発</h2>
        <p class="content__text">ユーザー中心設計のデザイン哲学に基づき、与えられたペルソナ・価値仮説シートからユーザーストーリーを構築しました。そしてそのユーザーゴールから、ユーザーが展示を「発見する」「保存する」「整理する」ことをアプリでの主要機能とし、ペルソナの課題を解決します。この3つの主要機能を、新聞や雑誌の切り抜きという意味を持つ Scrap をモチーフに表しました。</p>
-       <div class="leftSide">
+
+       <div class="imageContainer clearfix">
          <img src="images/scrapboard/persona.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/scrapboard/valuesheet.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
          <img src="images/scrapboard/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-
-
-       </div>
-       <div class="rightSide">
-         <img src="images/scrapboard/valuesheet.png" alt="" class="worksImg worksImg--Small worksImg--Small--right">
-         <img src="images/scrapboard/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/scrapboard/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--left imageEven">
 
        </div>
+
 
        <!-- <img src="images/playfulfes/OGP.png" alt="" class="worksImg worksImg--big"> -->
 
@@ -154,15 +152,17 @@
        <p class="content__subtitle">Home Tab</p>
        <h2 class="content__title">ユーザーの離脱を回避するUI設計</h2>
        <p class="content__text">Homeタブはユーザーの好みの展示を発見するタブです。展示の詳細を閲覧でき、気に入った展示をボードに保存する機能を有しています。ユーザーが展示を保存したとき初めて会員登録を求めることで、ユーザーのアプリ離脱を回避します。また、Twitter,Instgram連携を取り入れることで、会員登録・ログインの過程をスムーズにします。</p>
-       <div class="leftSide">
+
+       <div class="imageContainer clearfix">
          <img src="images/scrapboard/sp00.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/scrapboard/sp04.png" alt="" class="worksImg--Small worksImg--Small--left imageEven">
          <img src="images/scrapboard/sp01.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/scrapboard/sp02.png" alt="" class="worksImg--Small worksImg--Small--left imageEven">
 
        </div>
-       <div class="rightSide">
-         <img src="images/scrapboard/sp04.png" alt="" class="worksImg--Small worksImg--Small--left">
-         <img src="images/scrapboard/sp02.png" alt="" class="worksImg--Small worksImg--Small--left">
-       </div>
+
+
+
 
 
 
@@ -175,13 +175,13 @@
        <p class="content__subtitle">Search Tab</p>
        <h2 class="content__title">自発的に探しやすい検索体験</h2>
        <p class="content__text">ユーザーが自発的に展示を探すタブ。テキスト検索だけでなく、ユーザーがより探しやすい体験を届けられるよう、カテゴリ検索やトレンド検索、さらにフィルター検索を提案しました。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/scrapboard/sp03.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/scrapboard/sp07.png" alt="" class="worksImg--Small worksImg--Small--left imageEven">
 
        </div>
-       <div class="rightSide">
-         <img src="images/scrapboard/sp07.png" alt="" class="worksImg--Small worksImg--Small--left">
-       </div>
+
+
 
 
 
@@ -195,15 +195,14 @@
        <p class="content__subtitle">Board Tab</p>
        <h2 class="content__title">ボード保存機能</h2>
        <p class="content__text">保存した展示を整理するタブ。ユーザーがボードごとに保存した展示を閲覧、整理することができます。さらに今月に終わってしまう展示をプログラムが自動でボードを作成することで、ペルソナの抱いていた「行きたい展示を忘れてしまう」という課題を解決します。</p>
-       <div class="leftSide">
+       <div class="imageContainer clearfix">
          <img src="images/scrapboard/sp06.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/scrapboard/sp10.png" alt="" class="worksImg--Small worksImg--Small--left imageEven">
          <img src="images/scrapboard/sp05.png" alt="" class="worksImg--Small worksImg--Small--left">
+         <img src="images/scrapboard/sp08.png" alt="" class="worksImg--Small worksImg--Small--left imageEven">
 
        </div>
-       <div class="rightSide">
-         <img src="images/scrapboard/sp10.png" alt="" class="worksImg--Small worksImg--Small--left">
-         <img src="images/scrapboard/sp08.png" alt="" class="worksImg--Small worksImg--Small--left">
-       </div>
+
 
 
 
