[update] Aboutページの写真を変更

--- a/about.html
+++ b/about.html
@@ -71,7 +71,9 @@
 
  <section class="about__contents">
    <div class="about__introduction clearfix">
-     <img src="images/About/Profile.png" alt="" class="about__introduction__img">
+     <div class="trim">
+       <img src="images/About/profile.png" alt="" class="about__introduction__img">
+     </div>
      <div class="about__introduction__text">
        <h2 class="about__introduction__title">Hi, I’m Ryosuke Fujiki</h2><br>
        <p class="about__introduction__details">1996年シンガポール生まれ、東京育ち。2015年より慶應義塾大学環境情報学部に通い、2018年春に大学４年生に進学する。HCI, UI/UX を研究テーマとする中西泰人研究室に所属し、 ORFや MAKER FAIRE TOKYO などの展示を通して研究発表を行ってきた。デザイン、エンジニアリングの両軸を専門とする企画立案から ”ものづくり” をすることが得意なクリエイター。</p>
@@ -93,7 +95,9 @@
    </div>
 
    <div class="about__internship clearfix">
-     <img src="images/About/Intern.png" alt="" class="about__internship__img">
+     <div class="trim about__internship__img">
+       <img src="images/About/internship.jpg" alt="">
+     </div>
      <div class="about__internship__text">
        <h2 class="about__internship__title">INTERNSHIP 2015 - 2017</h2><br>
        <p class="about__internship__details">
