[update] Gifの画像サムネイルもアップデート

--- a/about.html
+++ b/about.html
@@ -81,6 +81,7 @@
    </div>
 
    <div class="about__skill clearfix">
+     <img src="images/About/Skill.gif" alt="" class="sp_about__skill__img">
      <div class="about__skill__text">
        <h2 class="about__skill__title">My Skill</h2><br>
        <p class="about__skill__details">
