[fix] aboutページの画像

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
  <section class="about__contents">
    <div class="about__introduction clearfix">
      <div class="trim">
-       <img src="images/About/profile.png" alt="" class="about__introduction__img">
+       <img src="images/About/profile2.png" alt="" class="about__introduction__img">
      </div>
      <div class="about__introduction__text">
        <h2 class="about__introduction__title">Hi, I’m Ryosuke Fujiki</h2><br>
