--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/about.css">
+  <link rel="shortcut icon" href="images/home/favicon.ico" >
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/header_menu.js">
   </script>
