--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/swiper.css">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="shortcut icon" href="images/home/favicon.ico" >
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/header_menu.js">
   </script>
