[Update] NextボタンGoogleFontにならない問題解消

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RyosukeFujiki Portfolio</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700i" rel="stylesheet">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/swiper.css">
   <link rel="stylesheet" href="css/home.css">
@@ -90,7 +90,12 @@
         <div class="contents__bg">
         </div>
         <div class="trim">
-          <a href="familybook.html"><img src="images/home/familybook_home.png" alt="" class="contents__work__img"></a>
+          <a href="familybook.html"><img src="images/home/familybook_home.png" alt="" class="contents__work__img">
+            <!-- <div class="caption">
+              <h3>かぞくが、ものがたり。</h3>
+              <p>Produce Design / Graphic Design</p>
+            </div> -->
+          </a>
         </div>
       </div>
 
