--- a/familybook.html
+++ b/familybook.html
@@ -46,14 +46,14 @@
   <div class="overlay">
     <nav class="overlay-menu">
       <ul>
-        <li class="overlay__menu__list"><a href="index.html" class="overlay__home">
-          <span class="text--letterspace">Hom</span>e
-        </a></li>
-        <li class="overlay__menu__list"><a href="works.html" class="overlay__works">
+        <li class="overlay__menu__list"><a href="works.html" class="overlay__home">
           <span class="text--letterspace">Work</span>s
         </a></li>
-        <li class="overlay__menu__list"><a href="about.html" class="overlay__about">
+        <li class="overlay__menu__list"><a href="about.html" class="overlay__works">
           <span class="text--letterspace">Abou</span>t
+        </a></li>
+        <li class="overlay__menu__list"><a href="https://note.mu/ryosukefujiki" class="overlay__about">
+          <span class="text--letterspace">Blog</span>s
         </a></li>
         <li class="overlay__menu__list"><a href="" class="overlay__resume"  target="_blank">
           <span class="text--letterspace">Resum</span>e
