--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li class="overlay__menu__list"><a href="about.html" class="overlay__works">
           <span class="text--letterspace">Abou</span>t
         </a></li>
-        <li class="overlay__menu__list"><a href="https://note.mu/ryosukefujiki" class="overlay__about">
+        <li class="overlay__menu__list"><a href="https://note.mu/ryosukefujiki" target = "_blank" class="overlay__about">
           <span class="text--letterspace">Blog</span>s
         </a></li>
         <li class="overlay__menu__list"><a href="" class="overlay__resume"  target="_blank">
