作品番号の修正

--- a/hive.html
+++ b/hive.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RyosukeFujiki Portfolio | かぞくが、ものがたり。</title>
+  <title>RyosukeFujiki Portfolio | Hive</title>
   <link rel="stylesheet" href="css/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
@@ -79,7 +79,7 @@
 
 
 <div class="heroImg familybookImg">
-  <p class="workNumber">02-05</p>
+  <p class="workNumber">01-05</p>
   <h1 class="heading">かぞくが、ものがたり。</h1>
   <p class="workCategory">Product Design / Graphic Design / Planning</p>
 </div>
