Hiveの文章更新

--- a/hive.html
+++ b/hive.html
@@ -80,8 +80,8 @@
 
 <div class="heroImg familybookImg">
   <p class="workNumber">01-05</p>
-  <h1 class="heading">かぞくが、ものがたり。</h1>
-  <p class="workCategory">Product Design / Graphic Design / Planning</p>
+  <h1 class="heading">Hive</h1>
+  <p class="workCategory">Logo Design / UI Design / UX Design</p>
 </div>
 
  <section class="work__contents">
@@ -90,15 +90,15 @@
     <div class="leftSide">
      <div class="content__overview">
        <p class="content__subtitle">Overview</p>
-       <h2 class="content__title">敬老の日を盛り上げるアイディア</h2>
-       <p class="overview__text">電通 Internship 2017 アイディアの学校 にて開催された「敬老の日を盛り上げるアイディアを考える」がテーマのコンペティションで 最優秀賞 をいただいた作品です。敬老の日に家族でとりくむ参加型のプロダクトを制作しました。この絵本ほとんどが空白のページでできており、祖父母との対話を通じ、家族にまつわるストーリーを子供が絵本で完成させるというプロダクトです。</p>
+       <h2 class="content__title">Bot がサポートする Closed なメッセージアプリ</h2>
+       <p class="overview__text">Goodpatch 2018 冬季インターンシップ において開催された「家族 or カップルの関係性をより深 めるサービス」を考えるというテーマで制作したプロダクト。度重なるユーザーインタビュー を行い、ペルソナ、ユーザーストーリーを定め、一つのアプリケーションの形に落とし込みました。 カップルや家族が使用する専用のクローズドなメッセージアプリケーションで、Bot がメッセージ における関係性を支えます。</p>
      </div>
 
       <div class="content__award">
      <p class="content__subtitle">Award</p>
-     <h2 class="content__title">「アイディアの学校」 金賞 受賞</h2>
+     <h2 class="content__title">最優秀賞 受賞</h2>
      <p class="overview__text">
-       <a class="link__text familybookText" href="http://www.career.dentsu.jp/intern/2017/" target="_blank">電通インターンシップ2017　アイディアの学校</a>　金賞　受賞</p>
+       <a class="link__text familybookText" href="https://www.wantedly.com/companies/goodpatch/post_articles/110684" target="_blank">Goodpatch Winter Internship 2018</a>　最優秀賞　受賞</p>
     </div>
     </div>
 
@@ -107,25 +107,27 @@
       <div class="content__details">
        <p class="content__right__subtitle">ProjectDetails</p>
        <p class="overview__text">
-         制作日 : 2017年8月<br>
-         制作期間: 2weeks </p>
+         制作日 : 2018年2月<br>
+         制作期間: 1week </p>
       </div>
 
       <div class="content__tool">
        <p class="content__right__subtitle">Tool</p>
        <p class="overview__text">
-         Adobe Illustrator<br>
-         Adobe Photoshop </p>
+         Adobe Illustrator,Photoshop<br>
+         Sketch</p>
       </div>
 
       <div class="content__team">
-       <p class="content__right__subtitle">Team(2)</p>
+       <p class="content__right__subtitle">Team(3)</p>
        <p class="overview__text">
          藤木 良祐<br>
-         <span class="overview__text__task">　- Design</span><br>
-         <span class="overview__text__task">　- Planning</span><br>
-         荒川 陸<br>
-         <span class="overview__text__task">　- Planning</span></p>
+         <span class="overview__text__task">　- Logo Design</span><br>
+         <span class="overview__text__task">　- UI Design</span><br>
+         児玉 彩<br>
+         <span class="overview__text__task">　- Project Management</span><br>
+         塩浜 有紀子<br>
+         <span class="overview__text__task">　- UI Design</span></p>
       </div>
 
     </div>
@@ -139,8 +141,8 @@
    <div class="content process">
      <div class="content__process clearfix">
        <p class="content__subtitle">Process</p>
-       <h2 class="content__title">敬老の日は、「かぞくの日」</h2>
-       <p class="content__text">敬老の日の抱える課題を私たちは、「核家族化する現代において祖父母が家族の文脈から離れてしまっていること」と捉え、「敬老の日に祖父母と家族の関係性を取り戻す」ための解決策として、参加型の未完成の絵本を提案しました。敬老の日を、かぞくの日として捉え直す視点を評価いただきました。</p>
+       <h2 class="content__title">度重ねたユーザーインタビュー</h2>
+       <p class="content__text">チームメンバーとのアイディエーションによって、「長い付き合いのある特別な 2 人は信頼関係が あり今後の関係性において大きな変化より安定を求めている」という仮説を導き出しました。この仮定検証を行うために、想定するユーザー像に近い男女合わせて 10 名にユーザーインタビューを行いました。そうしたの過程の中で、確かに、長い付き合いのある特別な2人は大きな変化より 安定を求めていることがわかり、またいくつかの不満を持っていることに気がつきました。</p>
        <div class="imageContainer clearfix">
          <img src="images/familybook/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
          <img src="images/familybook/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
@@ -155,9 +157,9 @@
 
    <div class="content contents">
      <div class="content__process clearfix">
-       <p class="content__subtitle">Contents</p>
-       <h2 class="content__title">世界に一つだけの絵本</h2>
-       <p class="content__text">絵本の構成するページのほとんどが、下図のように空白でできています。子どもが祖父母に、いつもは聞けない話を聞いて、一つの作品に仕上げるプロダクトです。それにより、世界にたったの一つだけの絵本が生まれます。「家族のなりたち」や、「パパとママの出会い」、「パパとママの昔話」などのテーマで構成されています。</p>
+       <p class="content__subtitle">Persona</p>
+       <h2 class="content__title">ペルソナのペインとゴール</h2>
+       <p class="content__text">度重ねたユーザーインタビューの過程の中で、信頼関係のある特別な 2人は Between や Slack などの Closed なメッセージアプリケーションを用いてコミュニケーションをとってることがわかりました。そこで、そうした Closed なメッセージアプリにおけるコミュニケーションで生じるペインとゴールを導き出し、ペルソナ、ユーザーストーリーを作成しました。</p>
 
        <div class="imageContainer clearfix">
          <img src="images/familybook/page01.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
@@ -178,9 +180,9 @@
 
    <div class="content research">
      <div class="content__process  clearfix">
-       <p class="content__subtitle">User Research</p>
-       <h2 class="content__title">6歳の女の子の実施例</h2>
-       <p class="content__text">プロダクトの実用性を検証するため、実際に6歳児の女の子がいる家庭で、「かぞくが、ものがたり。」を使っていただきました。子どもの創造性を活かすお絵かきのページと、ある程度のストーリーの枠組みを用意することで、子どものモチベーションのバランスを保つことが確認できました。</p>
+       <p class="content__subtitle">Contents</p>
+       <h2 class="content__title">Hive でできること</h2>
+       <p class="content__text">Hive は、まず2人だけのコミュニケーションスペースを提供します。自らチャットルームを作成 し、日々の思い出や目的ごとに分けたコミュニケーションをすることができます。次に、Hive で は、Bot を活用し、2 人だけのコミュニケーションをより快適なものにすべくサポートします。</p>
 
        <div class="imageContainer clearfix">
          <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
@@ -196,6 +198,29 @@
 
      </div>
    </div>
+
+
+
+      <div class="content research">
+        <div class="content__process  clearfix">
+          <p class="content__subtitle">Goal</p>
+          <h2 class="content__title">Hive で実現すること</h2>
+          <p class="content__text">こうした Hive の機能によって、信頼関係のある 2 人のコミュニケーションを円滑にし、些細なトラブルを解決します。Hive のビジュアルイメージについては、活気に溢れた場所としてのモチーフとして蜂の巣を取り入れ、配色もなるべく視認性を損なわないように配慮しながらも、ハニーイエローに統一しました。こうした Hive に対する一貫したビジュアル設計によって、ユーザーに統一感のあるデザインを伝えました。</p>
+
+          <div class="imageContainer clearfix">
+            <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
+            <img src="images/familybook/research01.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
+            <img src="images/familybook/page07.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
+             <img src="images/familybook/research02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
+            <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
+            <img src="images/familybook/research03.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
+          </div>
+
+          <img src="images/familybook/research04.png" alt="" class="worksImg worksImg--big">
+
+
+        </div>
+      </div>
 
  </section>
 
