hive作品の追加

--- a/hive.html
+++ b/hive.html
@@ -78,7 +78,7 @@
   </div>
 
 
-<div class="heroImg familybookImg">
+<div class="heroImg hiveImg">
   <p class="workNumber">01-05</p>
   <h1 class="heading">Hive</h1>
   <p class="workCategory">Logo Design / UI Design / UX Design</p>
@@ -98,7 +98,7 @@
      <p class="content__subtitle">Award</p>
      <h2 class="content__title">最優秀賞 受賞</h2>
      <p class="overview__text">
-       <a class="link__text familybookText" href="https://www.wantedly.com/companies/goodpatch/post_articles/110684" target="_blank">Goodpatch Winter Internship 2018</a>　最優秀賞　受賞</p>
+       <a class="link__text hiveText" href="https://www.wantedly.com/companies/goodpatch/post_articles/110684" target="_blank">Goodpatch Winter Internship 2018</a>　最優秀賞　受賞</p>
     </div>
     </div>
 
@@ -132,8 +132,8 @@
 
     </div>
 
-    <img src="images/familybook/familybook_home.png" alt="" class="worksImg worksImg--big">
-    <img src="images/familybook/openbook.png" alt="" class="worksImg worksImg--big">
+    <img src="images/hive/hive.png" alt="" class="worksImg worksImg--big">
+
 
 
    </div>
@@ -144,10 +144,8 @@
        <h2 class="content__title">度重ねたユーザーインタビュー</h2>
        <p class="content__text">チームメンバーとのアイディエーションによって、「長い付き合いのある特別な 2 人は信頼関係が あり今後の関係性において大きな変化より安定を求めている」という仮説を導き出しました。この仮定検証を行うために、想定するユーザー像に近い男女合わせて 10 名にユーザーインタビューを行いました。そうしたの過程の中で、確かに、長い付き合いのある特別な2人は大きな変化より 安定を求めていることがわかり、またいくつかの不満を持っていることに気がつきました。</p>
        <div class="imageContainer clearfix">
-         <img src="images/familybook/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
-         <img src="images/familybook/process03.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/process04.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
+         <img src="images/hive/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/hive/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
        </div>
 
 
@@ -162,14 +160,10 @@
        <p class="content__text">度重ねたユーザーインタビューの過程の中で、信頼関係のある特別な 2人は Between や Slack などの Closed なメッセージアプリケーションを用いてコミュニケーションをとってることがわかりました。そこで、そうした Closed なメッセージアプリにおけるコミュニケーションで生じるペインとゴールを導き出し、ペルソナ、ユーザーストーリーを作成しました。</p>
 
        <div class="imageContainer clearfix">
-         <img src="images/familybook/page01.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/page02.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
-         <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/page04.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
-         <img src="images/familybook/page05.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/page06.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
-         <img src="images/familybook/page07.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left">
-         <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
+         <img src="images/hive/persona01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/hive/persona02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
+         <img src="images/hive/persona03.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+         <img src="images/hive/persona04.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
        </div>
 
 
@@ -184,16 +178,7 @@
        <h2 class="content__title">Hive でできること</h2>
        <p class="content__text">Hive は、まず2人だけのコミュニケーションスペースを提供します。自らチャットルームを作成 し、日々の思い出や目的ごとに分けたコミュニケーションをすることができます。次に、Hive で は、Bot を活用し、2 人だけのコミュニケーションをより快適なものにすべくサポートします。</p>
 
-       <div class="imageContainer clearfix">
-         <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
-         <img src="images/familybook/research01.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
-         <img src="images/familybook/page07.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
-          <img src="images/familybook/research02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
-         <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
-         <img src="images/familybook/research03.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
-       </div>
-
-       <img src="images/familybook/research04.png" alt="" class="worksImg worksImg--big">
+       <img src="images/hive/contents.png" alt="" class="worksImg worksImg--big">
 
 
      </div>
@@ -208,15 +193,11 @@
           <p class="content__text">こうした Hive の機能によって、信頼関係のある 2 人のコミュニケーションを円滑にし、些細なトラブルを解決します。Hive のビジュアルイメージについては、活気に溢れた場所としてのモチーフとして蜂の巣を取り入れ、配色もなるべく視認性を損なわないように配慮しながらも、ハニーイエローに統一しました。こうした Hive に対する一貫したビジュアル設計によって、ユーザーに統一感のあるデザインを伝えました。</p>
 
           <div class="imageContainer clearfix">
-            <img src="images/familybook/page03.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
-            <img src="images/familybook/research01.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
-            <img src="images/familybook/page07.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
-             <img src="images/familybook/research02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
-            <img src="images/familybook/page08.jpg" alt="" class="worksImg worksImg--Small worksImg--Small--left" width="320px" height="228.05px">
-            <img src="images/familybook/research03.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven" width="320px" height="228.05px">
+            <img src="images/hive/goal01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
+            <img src="images/hive/goal02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
           </div>
 
-          <img src="images/familybook/research04.png" alt="" class="worksImg worksImg--big">
+
 
 
         </div>
