Hive画像の修正

--- a/index.html
+++ b/index.html
@@ -86,7 +86,32 @@
         </div>
       </div> -->
 
+      <div class="swiper-slide">
+        <div class="contents__bg">
+        </div>
+        <div class="trim">
+          <a href="hive.html"><img src="images/home/hive_home.png" alt="" class="contents__work__img">
+            <!-- <div class="caption">
+              <h3>かぞくが、ものがたり。</h3>
+              <p>Produce Design / Graphic Design</p>
+            </div> -->
+          </a>
+        </div>
+      </div>
 
+
+      <div class="swiper-slide">
+        <div class="contents__bg">
+        </div>
+        <div class="trim">
+          <a href="familybook.html"><img src="images/home/familybook_home.png" alt="" class="contents__work__img">
+            <!-- <div class="caption">
+              <h3>かぞくが、ものがたり。</h3>
+              <p>Produce Design / Graphic Design</p>
+            </div> -->
+          </a>
+        </div>
+      </div>
 
       <div class="swiper-slide">
         <div class="contents__bg">
@@ -112,18 +137,7 @@
         </div>
       </div>
 
-      <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim">
-          <a href="familybook.html"><img src="images/home/familybook_home.png" alt="" class="contents__work__img">
-            <!-- <div class="caption">
-              <h3>かぞくが、ものがたり。</h3>
-              <p>Produce Design / Graphic Design</p>
-            </div> -->
-          </a>
-        </div>
-      </div>
+
 <!--
       <div class="swiper-slide">
         <div class="contents__bg">
